k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: notes.local
      http:
        paths:
          # ✅ Only API path has a rewrite
          - path: /notes
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          # ✅ Frontend — NO rewrite — just forwards everything
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
